# GoletaEngine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
Source/: CMakeLists.txt
Source/Editor/: CMakeLists.txt
Source/Editor/EditorApp/: CMakeLists.txt  Main.cpp
Source/Editor/EditorCore/: CMakeLists.txt
Source/Editor/EditorCore/Private/: EditorEngine.cpp
Source/Editor/EditorCore/Public/: EditorCore.h  EditorCoreExport.h  EditorEngine.h
Source/Editor/EditorCore/Tests/: EditorEngineTests.cpp
Source/Editor/EditorUI/: CMakeLists.txt
Source/Editor/EditorUI/Private/: EditorMainWindow.cpp  EditorPanelRegistry.cpp
Source/Editor/EditorUI/Private/Panels/: ConsolePanel.cpp  ViewportPanel.cpp
Source/Editor/EditorUI/Public/: EditorMainWindow.h  EditorPanelRegistry.h  EditorUI.h  EditorUIExport.h  IEditorPanel.h
Source/Editor/EditorUI/Public/Panels/: ConsolePanel.h  ViewportPanel.h
Source/Editor/EditorUI/Tests/: EditorPanelRegistryTests.cpp
Source/Runtime/: CMakeLists.txt
Source/Runtime/Core/: CMakeLists.txt
Source/Runtime/Core/Internal/Math/SIMD/: Impl_NEON.inl  Impl_SSE.inl  Impl_Scalar.inl  SimdConfig.h  SimdOps.h  SimdTypes.h
Source/Runtime/Core/Private/: Log.cpp
Source/Runtime/Core/Private/Math/: Matrix.cpp  Quaternion.cpp  Transform.cpp
Source/Runtime/Core/Public/: Compiler.h  Core.h  CoreExport.h  Log.h  Result.h  TypeHash.h
Source/Runtime/Core/Public/Containers/: HashMap.h  String.h  Vec.h
Source/Runtime/Core/Public/Math/: Math.h  Matrix.h  Matrix.inl  Quaternion.h  Quaternion.inl  Transform.h  Transform.inl  Vector.h  Vector.inl
Source/Runtime/Core/Public/Memory/: Allocator.h  Arc.h  Box.h  Rc.h
Source/Runtime/Core/Tests/: LogTests.cpp  ResultTests.cpp  TypeHashTests.cpp
Source/Runtime/Core/Tests/Containers/: ContainersTests.cpp
Source/Runtime/Core/Tests/Math/: MathTestHelpers.h  MatrixTests.cpp  QuaternionTests.cpp  TransformTests.cpp  VectorTests.cpp
Source/Runtime/Core/Tests/Memory/: RcTests.cpp
Source/Runtime/Engine/: CMakeLists.txt
Source/Runtime/Engine/Internal/: SubsystemRegistry.h
Source/Runtime/Engine/Private/: EngineCore.cpp  GameEngine.cpp  Subsystem.cpp
Source/Runtime/Engine/Public/: Engine.h  EngineCore.h  EngineExport.h  GameEngine.h  Subsystem.h
Source/Runtime/Engine/Tests/: EngineTests.cpp
Source/Runtime/RHI/: CMakeLists.txt
Source/Runtime/RHI/Internal/: RHIBackend.h  RHIBackendRegistry.h
Source/Runtime/RHI/Private/: RHIBackendRegistry.cpp  RHIFormat.cpp  RHIInstance.cpp  RHINullBackend.cpp  RHIPlatform.cpp
Source/Runtime/RHI/Public/: RHI.h  RHIAdapter.h  RHIBarrier.h  RHIBuffer.h  RHICommandList.h  RHIDebug.h  RHIDescriptor.h  RHIDevice.h  RHIEnums.h  RHIExport.h  RHIFeatures.h  RHIFormat.h  RHIForward.h  RHIHandle.h  RHIInstance.h  RHIMemory.h  RHIMeshShading.h  RHINativeHandle.h  RHIPipeline.h  RHIQuery.h  RHIQueue.h  RHIRayTracing.h  RHIResource.h  RHISampler.h  RHIShader.h  RHIStructChain.h  RHISwapChain.h  RHISync.h  RHITexture.h  RHIWorkGraph.h
Source/Runtime/RHI/Public/Platform/: RHIPlatform.h
Source/Runtime/RHI/Tests/: RHIBackendRegistryTests.cpp  RHICommandPoolTests.cpp  RHIDebugTests.cpp  RHIFeaturesTests.cpp  RHIFormatTests.cpp  RHIHandleTests.cpp  RHINullBackendTests.cpp  RHIStructChainTests.cpp
Source/Runtime/RHI/Tests/Common/: RhiBackendMask.h  RhiSlangCompiler.cpp  RhiSlangCompiler.h  RhiTestFixture.cpp  RhiTestFixture.h  RhiTestHelpers.cpp  RhiTestHelpers.h
Source/Runtime/RHI/Tests/Cross/: Rhi_Buffer_Tests.cpp  Rhi_CommandList_Tests.cpp  Rhi_CommandPool_Tests.cpp  Rhi_ComputePipeline_Tests.cpp  Rhi_Debug_Tests.cpp  Rhi_Descriptor_Tests.cpp  Rhi_Device_Tests.cpp  Rhi_Features_Tests.cpp  Rhi_Fence_Tests.cpp  Rhi_Instance_Tests.cpp  Rhi_MemoryHeap_Tests.cpp  Rhi_NativeHandle_Tests.cpp  Rhi_ObjectNaming_Tests.cpp  (+6 more)
Source/Runtime/RHID3D12/: CMakeLists.txt
Source/Runtime/RHID3D12/Internal/: D3D12BarrierTranslate.h  D3D12Buffer.h  D3D12CommandList.h  D3D12Debug.h  D3D12DescriptorHeap.h  D3D12DescriptorSet.h  D3D12Device.h  D3D12Fence.h  D3D12FormatTable.h  D3D12HdrOutput.h  D3D12Instance.h  D3D12MemoryHeap.h  D3D12MeshShading.h  D3D12Pipeline.h  D3D12Prelude.h  D3D12QueryHeap.h  D3D12Queue.h  D3D12RayTracing.h  D3D12Sampler.h  D3D12ShaderModule.h  D3D12SparseBinding.h  D3D12SwapChain.h  D3D12Texture.h  D3D12VideoQueue.h  D3D12WorkGraph.h
Source/Runtime/RHID3D12/Private/: D3D12Backend.cpp  D3D12BarrierTranslate.cpp  D3D12Buffer.cpp  D3D12CommandList.cpp  D3D12Debug.cpp  D3D12DescriptorHeap.cpp  D3D12DescriptorSet.cpp  D3D12Device.cpp  D3D12Fence.cpp  D3D12FormatTable.cpp  D3D12HdrOutput.cpp  D3D12Instance.cpp  D3D12MemoryHeap.cpp  D3D12MeshShading.cpp  D3D12Pipeline.cpp  D3D12Prelude.cpp  D3D12QueryHeap.cpp  D3D12Queue.cpp  D3D12RayTracing.cpp  D3D12Sampler.cpp  D3D12ShaderModule.cpp  D3D12SparseBinding.cpp  D3D12SwapChain.cpp  D3D12Texture.cpp  D3D12VideoQueue.cpp  D3D12WorkGraph.cpp
Source/Runtime/RHID3D12/Public/: RHID3D12Export.h  RHID3D12ForceLink.h
Source/Runtime/RenderGraph/: CMakeLists.txt
Source/Runtime/RenderGraph/Internal/: AccessStateTable.h  BarrierPlanner.h  CommandPoolCache.h  CompiledGraph.h  ExecuteSchedule.h  ResourcePool.h  ResourceRegistry.h  TopologicalSort.h
Source/Runtime/RenderGraph/Private/: AccessStateTable.cpp  BarrierPlanner.cpp  CommandPoolCache.cpp  RenderData.cpp  RenderGraph.cpp  RenderGraphCompile.cpp  RenderGraphExecute.cpp  RenderGraphImpl.h  RenderPassReflection.cpp  ResourcePool.cpp  ResourceRegistry.cpp  TopologicalSort.cpp
Source/Runtime/RenderGraph/Public/: PassField.h  RenderContext.h  RenderData.h  RenderGraph.h  RenderGraphExport.h  RenderGraphForward.h  RenderGraphTypes.h  RenderPass.h  RenderPassReflection.h
Source/Runtime/RenderGraph/Tests/: AliasingTests.cpp  BarrierPlannerTests.cpp  QueueSchedulerTests.cpp  RenderGraphCompileTests.cpp  RenderGraphConnectTests.cpp  RenderPassReflectionTests.cpp
Source/Runtime/RenderGraph/Tests/Cross/: RenderGraphExecute_Tests.cpp
cmake/: FetchSlangPrebuilt.cmake  GoletaModule.cmake  GoletaTests.cmake
(+6 files in other folders)
